fix(maps): Ensure tooltips display correctly on location pin hover (#143)
- Fix the issue where map card tooltips were not showing properly when hovering over location pins
- Ensure tooltips appear as expected and align with the intended design
- Improve user experience by providing clear and accurate information on hover

Changes summary:
Resolved the issue with map card tooltips not displaying correctly on location pin hover, ensuring proper functionality and alignment with the design.

--- a/src/sass/elements/_right--main.scss
+++ b/src/sass/elements/_right--main.scss
@@ -259,7 +259,7 @@
 			--bg-primary: hsla(var(--accent-hsl) / 0.1) !important;
 			text-transform: uppercase;
 
-			&:hover {
+			&:is(:hover, :focus) {
 				// background-color: hsla(var(--accent-hsl) / 0.25) !important;
 				// color: var(--c-accent) !important;
 
